# ghub-obs-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
obs_plugin/: CMakeLists.txt
obs_plugin/libs/osx/: libobs-frontend-api.dylib  libobs.dylib  obs-frontend-api.dylib
obs_plugin/libs/x64/: obs-frontend-api.exp  obs-frontend-api.lib  obs.exp  obs.lib
obs_plugin/libs/x86/: obs-frontend-api.exp  obs-frontend-api.lib  obs.exp  obs.lib
obs_plugin/src/: obs_plugin.cpp  obs_plugin.hpp
other/obs-studio/UI/obs-frontend-api/: obs-frontend-api.h
other/obs-studio/libobs/: obs-module.h
